--- a/AplicaciónTrimestre/AplicaciónTrimestre.csproj
+++ b/AplicaciónTrimestre/AplicaciónTrimestre.csproj
@@ -129,6 +129,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\ClienteController.cs" />
+    <Compile Include="Controllers\CompraController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProductoController.cs" />
     <Compile Include="Controllers\ProductoImagenController.cs" />
@@ -271,6 +272,12 @@
     <Content Include="Views\UsuarioRol\ListarRoles.cshtml" />
     <Content Include="Views\UsuarioRol\Details.cshtml" />
     <Content Include="Views\UsuarioRol\Edit.cshtml" />
+    <Content Include="Views\Compra\Index.cshtml" />
+    <Content Include="Views\Compra\ListarUsuarios.cshtml" />
+    <Content Include="Views\Compra\ListarClientes.cshtml" />
+    <Content Include="Views\Compra\Create.cshtml" />
+    <Content Include="Views\Compra\Details.cshtml" />
+    <Content Include="Views\Compra\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
