--- a/AplicaciónTrimestre/AplicaciónTrimestre.csproj
+++ b/AplicaciónTrimestre/AplicaciónTrimestre.csproj
@@ -282,6 +282,7 @@
     <Content Include="Views\ProductoCompra\Details.cshtml" />
     <Content Include="Views\ProductoCompra\Edit.cshtml" />
     <Content Include="Views\Producto\Details.cshtml" />
+    <Content Include="Views\Usuario\Login.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
