--- a/AplicaciónTrimestre/AplicaciónTrimestre.csproj
+++ b/AplicaciónTrimestre/AplicaciónTrimestre.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Models\proveedor.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Reporte.cs" />
     <Compile Include="Models\roles.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -283,6 +284,8 @@
     <Content Include="Views\ProductoCompra\Edit.cshtml" />
     <Content Include="Views\Producto\Details.cshtml" />
     <Content Include="Views\Usuario\Login.cshtml" />
+    <Content Include="Views\Shared\Plantilla.cshtml" />
+    <Content Include="Views\Producto\Reporte.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
