--- a/AplicaciónTrimestre/AplicaciónTrimestre.csproj
+++ b/AplicaciónTrimestre/AplicaciónTrimestre.csproj
@@ -297,6 +297,7 @@
     <Content Include="Views\Producto\Reporte.cshtml" />
     <Content Include="Views\Compra\FacturaCompra.cshtml" />
     <Content Include="Views\Proveedor\uploadCSV.cshtml" />
+    <Content Include="Views\Usuario\uploadCSV.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
