--- a/AplicaciónTrimestre/AplicaciónTrimestre.csproj
+++ b/AplicaciónTrimestre/AplicaciónTrimestre.csproj
@@ -298,6 +298,9 @@
     <Content Include="Views\Compra\FacturaCompra.cshtml" />
     <Content Include="Views\Proveedor\uploadCSV.cshtml" />
     <Content Include="Views\Usuario\uploadCSV.cshtml" />
+    <Content Include="Views\Producto\uploadCSV.cshtml" />
+    <Content Include="Views\Cliente\uploadCSV.cshtml" />
+    <Content Include="Views\Roles\uploadCSV.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
