--- a/AplicaciónTrimestre/AplicaciónTrimestre.csproj
+++ b/AplicaciónTrimestre/AplicaciónTrimestre.csproj
@@ -144,6 +144,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\BaseModelo.cs" />
     <Compile Include="Models\cliente.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -185,6 +186,7 @@
     <Compile Include="Models\usuario.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\UsuarioIndex.cs" />
     <Compile Include="Models\usuariorol.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -302,6 +304,8 @@
     <Content Include="Views\Producto\uploadCSV.cshtml" />
     <Content Include="Views\Cliente\uploadCSV.cshtml" />
     <Content Include="Views\Roles\uploadCSV.cshtml" />
+    <Content Include="Views\Usuario\paginadorIndex.cshtml" />
+    <Content Include="Views\Shared\Paginador.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
