--- a/AplicaciónTrimestre/AplicaciónTrimestre.csproj
+++ b/AplicaciónTrimestre/AplicaciónTrimestre.csproj
@@ -178,6 +178,7 @@
     <Compile Include="Models\proveedor.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\ProveedorIndex.cs" />
     <Compile Include="Models\Reporte.cs" />
     <Compile Include="Models\FacturaCompra.cs" />
     <Compile Include="Models\roles.cs">
@@ -306,6 +307,7 @@
     <Content Include="Views\Roles\uploadCSV.cshtml" />
     <Content Include="Views\Usuario\paginadorIndex.cshtml" />
     <Content Include="Views\Shared\Paginador.cshtml" />
+    <Content Include="Views\Proveedor\paginadorIndex.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
